--- a/catus/templates/tools/generarimagen.html
+++ b/catus/templates/tools/generarimagen.html
@@ -124,7 +124,7 @@
 
     function facebookLogin() {
 
-        window.FB.login(facebookOnLogin, {scope: 'pages_show_list,pages_manage_posts,instagram_content_publish,instagram_basic,instagram_manage_comments'});
+        window.FB.login(facebookOnLogin, {scope: 'instagram_basic,instagram_content_publish,pages_show_list,pages_manage_posts,pages_read_engagement,business_management'});
     }
 
     function facebookOnLogin(response) {
