--- a/catus/templates/base.html
+++ b/catus/templates/base.html
@@ -50,6 +50,7 @@
 
   <link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="/static/css/base.css?v=8" rel="stylesheet" type="text/css">
+  <link href="/static/css/modern.css?v=1" rel="stylesheet" type="text/css">
 
   {% block css %}
   {% endblock %}
@@ -175,6 +176,9 @@
   <link rel="stylesheet" href="{% static 'alertify/css/themes/semantic.min.css' %}"/>
   <!-- Bootstrap theme -->
   <link rel="stylesheet" href="{% static 'alertify/css/themes/bootstrap.min.css' %}"/>
+
+  <!-- Efectos modernos -->
+  <script src='{% static "js/modern-effects.js" %}'></script>
 
 </body>
 
